--- a/app/src/main/res/layout/fragment_paw.xml
+++ b/app/src/main/res/layout/fragment_paw.xml
@@ -5,10 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".pawFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/paw" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewTrainees"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"/>
+
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
