--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,10 +52,10 @@
             android:id="@+id/logoutButton"
             android:layout_width="151dp"
             android:layout_height="57dp"
-            android:layout_marginStart="124dp"
             android:layout_marginBottom="124dp"
             android:text="@string/logout"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ListView
