--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@drawable/login_register_bg"
     android:orientation="vertical"
     tools:context=".profileFragment">
 
@@ -16,13 +17,13 @@
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:layout_marginTop="50dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="68dp"
+            android:background="#458AAC"
             android:elevation="20dp"
-            android:background="@drawable/gradient1">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/ProfileImage"
@@ -52,7 +53,8 @@
             android:id="@+id/logoutButton"
             android:layout_width="151dp"
             android:layout_height="57dp"
-            android:layout_marginBottom="124dp"
+            android:layout_marginBottom="128dp"
+            android:backgroundTint="#458AAC"
             android:text="@string/logout"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
