--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:background="@drawable/main_bg"
     tools:context=".HomeFragment">
 
     <RelativeLayout
@@ -29,6 +30,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
             android:text="@string/popular_categories"
+            android:textColor="#458AAC"
+            android:textStyle="bold"
             android:textSize="20sp" />
 
         <!-- GridLayout for Popular Categories -->
@@ -50,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -67,6 +70,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/dog_food1"
+                    android:textColor="@color/text_shadow_white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -78,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -94,6 +98,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:gravity="center"
+                    android:textColor="@color/text_shadow_white"
                     android:text="@string/cat_food1"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -106,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -124,6 +129,7 @@
                     android:gravity="center"
                     android:text="@string/pharmacy1"
                     android:textSize="16sp"
+                    android:textColor="@color/text_shadow_white"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -134,8 +140,9 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
+                android:textColor="@color/text_shadow_white"
                 android:orientation="vertical"
                 android:padding="8dp">
 
@@ -151,6 +158,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/litters_and_supplies1"
+                    android:textColor="@color/text_shadow_white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -162,7 +170,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -179,6 +187,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/grooming1"
+                    android:textColor="@color/text_shadow_white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -190,7 +199,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -207,6 +216,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/toys1"
+                    android:textColor="@color/text_shadow_white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -220,6 +230,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
             android:text="@string/popular_items"
+            android:textColor="#458AAC"
+            android:textStyle="bold"
             android:textSize="20sp" />
 
         <!-- GridLayout for Popular Items -->
@@ -241,7 +253,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -259,6 +271,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/dog_food2"
+                    android:textColor="@color/text_shadow_white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -270,7 +283,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -287,6 +300,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/litter_box"
+                    android:textColor="@color/text_shadow_white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -298,7 +312,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -316,6 +330,7 @@
                     android:gravity="center"
                     android:text="@string/cat_food2"
                     android:textSize="16sp"
+                    android:textColor="@color/text_shadow_white"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -326,7 +341,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -344,6 +359,7 @@
                     android:gravity="center"
                     android:text="@string/pet_sofa"
                     android:textSize="16sp"
+                    android:textColor="@color/text_shadow_white"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -354,7 +370,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -371,6 +387,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/pet_leash"
+                    android:textColor="@color/text_shadow_white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -382,7 +399,7 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_margin="8dp"
-                android:background="@drawable/category_background"
+                android:background="#458AAC"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="8dp">
@@ -399,6 +416,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/dog_bone"
+                    android:textColor="@color/text_shadow_white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
