--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,12 @@
             android:focusableInTouchMode="true"
             android:clickable="true"
             android:layout_margin="16dp"
+            android:background="@drawable/search_view_background"
+            android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <ListView
             android:id="@+id/searchListView"
             android:layout_width="0dp"
