--- a/app/src/main/res/layout/fragment_trainee_detail.xml
+++ b/app/src/main/res/layout/fragment_trainee_detail.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:text="Book Appointment"
         android:layout_below="@id/textTraineeDetails"
+        android:backgroundTint="#458AAC"
         android:layout_marginTop="24dp" />
 
 </RelativeLayout>
