--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,10 +19,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="444dp"
             android:text="@string/view_cart"
+            android:backgroundTint="#458AAC"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:backgroundTint="#458AAC"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/payButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Pay with Google Pay"
+            android:backgroundTint="#458AAC"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/view_cart_button" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cardView"
@@ -84,9 +95,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
-
-
