--- a/app/src/main/res/layout/fragment_cat_food.xml
+++ b/app/src/main/res/layout/fragment_cat_food.xml
@@ -10,5 +10,13 @@
         android:layout_height="wrap_content"
         android:text="Cat Food Items"
         android:textSize="20sp"
-        android:layout_centerInParent="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/CatFoodRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/cat_food_text"
+        android:layout_marginTop="16dp"/>
 </RelativeLayout>
