--- a/app/src/main/res/layout/item_dog_food.xml
+++ b/app/src/main/res/layout/item_dog_food.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/product_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
         android:contentDescription="@string/item_image" />
 
     <TextView
@@ -18,20 +18,22 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:text="product_name"/>
 
     <TextView
         android:id="@+id/product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:text="0"
         android:textSize="14sp" />
 
     <RatingBar
         android:id="@+id/product_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
         android:layout_marginTop="4dp"
         android:isIndicator="true"
         android:outlineAmbientShadowColor="#DDEFF3"
