--- a/app/src/main/res/layout/fragment_pharmacy.xml
+++ b/app/src/main/res/layout/fragment_pharmacy.xml
@@ -2,13 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <!-- Dog food items layout -->
     <TextView
         android:id="@+id/pharmacy_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="pharmacy Items"
+        android:text="@string/pharmacy"
         android:textSize="20sp"
-        android:layout_centerInParent="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/PharmacyRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/pharmacy_text"
+        android:layout_marginTop="16dp"/>
 </RelativeLayout>
